2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-pgp.el: When it is compiled, define `smime-output-buffer'
	and `smime-errors-buffer' to avoid compiler warning.

	* mime-edit.el: Ditto.

	* mime-pgp.el
	(mime-view-application/pkcs7-mime): Regard smime-type as
	"enveloped-data" unless it is specified.

	* smime.el (smime-directory-files): Abolish.
	(smime-verify-region): Abolish local variable `args'.

2000-02-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el: Remove X-Face setting; require cl when compiling.
	(mime-image-format-alist): Remove image/x-mag and image/x-pic.
	(mime-image-type-available-p): New function.
	(mime-image-create): New function.
	(mime-image-insert): New function.
	(mime-display-image): Rewrite.

	* mime-edit.el
	(mime-edit-define-charset): Handle 'mime-charset-comment.

2000-02-07  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-pgp.el: Fix doc string.
	* pgg-def.el: Ditto.
	* pgg-gpg.el: Ditto.
	* pgg-parse.el: Ditto.
	* pgg-pgp.el: Ditto.
	* pgg-pgp5.el: Ditto.
	* pgg.el: Ditto.

2000-02-02   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* pgg.el (pgg-temp-buffer-show-function): Don't check if the
	selected window is the only window.

2000-02-01   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.11.

	* mime-image.el: Add checking for `x-face-mule'.

 	* pgg.el,pgp-gpg.el,pgg-pgp.el,pgg-pgp5.el
	(pgg-scheme-lookup-key): Rename from
	`pgg-scheme-lookup-key-string'.
	(pgg-scheme-decrypt-region): Use `pgg-scheme-lookup-key'.
	(pgg-scheme-sign-region): Ditto.

	* pgg-gpg.el (pgg-scheme-lookup-key): Generate *PGG-output* buffer
	if it does not exist.

2000-01-24   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.10.

	* mime-image.el	[Emacs21]: Require `image' when compiling.
	(image-normalize): Use `create-image' with 3rd arg `data-p'.
	 (create-image): Advice it to accept 3rd arg `data-p'.
